--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "discord.js": "^13.2.0-dev.1628813079.f1d5ffc",
     "dotenv": "^10.0.0",
     "mongodb": "^4.1.0",
-    "mongoose": "^5.13.7"
+    "mongoose": "^5.13.7",
+    "yt-search": "^2.10.1",
+    "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
